--- a/content/posts/2023-07-15-story-solana-multisig.adoc
+++ b/content/posts/2023-07-15-story-solana-multisig.adoc
@@ -12,19 +12,22 @@ chalda <ondrej.chaloupka@proton.me>
 
 image::articles/spl-custom-transaction/spl-governance-story.jpg[]
 
-I want to share a story of an ordinal developer that gets a task and during the process he comes to learn various things
-and details in different contexts. This story is about Solana multisig via SPL Governance
-and creating a transaction that multisig signs and executes.
+
+A tale of an ordinary developer who receives a task, and during the process, he learns various things.
+This story revolves around Solana multisig configured with SPL Governance, 
+and the creation of an arbitrary transaction that multisig members sign and execute.
 
 == SPL Governance as multisig manager
 
 The https://github.com/solana-labs/solana-program-library/blob/master/governance/[SPL Governance] is a Solana program that runs DAO management.
 One https://app.realms.today/realms[can create] his own DAO instance in the system and use the SPL Governance for community to manage the DAO.
-But another good usage is to use it as multisig. For that one creates a new DAO where no community is involved and only particular wallets
-has permission to proceed with signatures. A benefit of the https://twitter.com/realms_daos[SPL Governance] system is that's part of
+But another possible usage is to use it as a multisig tooling. For that one creates a new DAO where no community is involved and only particular wallets
+has permission to proceed with signatures. This is referred as council managed.
+There are other offerings for multisig management like https://squads.so/[Squads protocol].
+While a benefit of the https://twitter.com/realms_daos[SPL Governance] system is that's part of
 the Solana Program Library and thus it's developed by people from https://solanalabs.com[Solana Labs].
 
-This is simple as go to https://app.realms.today/ (when testing the setup at devnet add https://app.realms.today/?cluster=devnet[?cluster=devnet]),
+This is simple as go to https://app.realms.today/ (when testing the your configuration add https://app.realms.today/?cluster=devnet[?cluster=devnet] for devnet deployment),
 click at blue button `Create DAO` and choose the `Multi-Signature Wallet`. The wizard goes with you through few steps
 where one defines what wallet keys will be part of the multisig management (members of the multisig may be still
 https://docs.realms.today/DAO-Management/DAO-add-members[added or removed later])
@@ -36,17 +39,17 @@ NOTE: For technical details about the SPL Governance system I recommend to read 
 For the purpose of the showcase in this blog post I have created a DAO
 https://app.realms.today/dao/2EogxMvrtTr8ccA4oQcAGfS8vKbDhYTANA12LW3fqUy3?cluster=devnet[Solana multisig signature]
 https://app.realms.today/dao/2EogxMvrtTr8ccA4oQcAGfS8vKbDhYTANA12LW3fqUy3/members?cluster=devnet[with one member]
-of address FwkjePeCG5CjD8uYsHh3hvj6X26KnNh2UrpZSpDiNbfh.
+of address `FwkjePeCG5CjD8uYsHh3hvj6X26KnNh2UrpZSpDiNbfh``.
 
 image::articles/spl-custom-transaction/one-member.png[]
 
-// TODO: could be possible to share the key?
-
-Any action that the multisig signs have to be defined as a `Proposal` that contains transactions that are confirmed and may be executed
-when enough multisig participants agree with.
+After the multisig DAO is created we can start to provide a transactions that should be signed by the multisig members.
+Any actions that the multisig should sign have to be defined as a `Proposal`
+that contains transactions. When the proposal is confirmed by multisig members then anybody may be execute.
 At the main page of the DAO one click at `⊕ New Proposal`. When the member wallet is connected a new `Proposal` can be created and then multisig owners
-can vote for or against it. The SPL Governance system provides a list of `Instruction` types where one can send funds
-or work with https://spl.solana.com/token[token accounts]. But what if my custom contract contains some admin abilities that I need to manage?
+can vote for or against it. The SPL Governance system provides a list of common `Instruction`s types that is integrated to UI and easily set up.
+Those are things as sending funds or working with https://spl.solana.com/token[token accounts].
+But what if my custom contract contains some admin abilities that I need to manage?
 How can I create a transaction that contains an arbitrary data?
 
 === SPL Governance workflow
@@ -56,15 +59,21 @@ in the SPL Governance system. The `Proposal` is a unit that represents "an actio
 The "action" is constituted as a transaction that can be executed when acknowledged by all multisig members.
 
 The SPL Governance `Proposal` workflow is first to create a `Proposal` with one or several instructions.
-Multisig members votes for the proposal. When the defined threshold of votes (acknowledgments) is exceeded then
-the instruction that constitutes the `Proposal` can be executed. That transaction (a set of instructions) is signed
-by the multisig address represented by `Governance Wallet`. This part is important from the perspective
-of the multisig signature and administering a admin rights in a contract. It's the `Governance Wallet` address
-that needs to be defined as the administrator. It's the `Governance Wallet` that signs the transactions on behalf
+Multisig members votes for the proposal. When the defined threshold of votes is exceeded then
+the instructions that constitute the `Proposal` can be executed. The threshold is defined as percentage
+per a `Governance` that represent the multisig wallet address.
+This fact is important from the perspective
+of the multisig signature and administering the admin rights in the contract. It's the `Governance Wallet` address
+that needs to be defined as owner of the funds to be transferred or and administrator authority within your contract.
+It's the `Governance Wallet` address that the SPL Governance uses to sign the transactions on behalf
 of the acknowledgment of the multisig members.
 
-The workflow continues when all transactions are executed then `Proposal` can be finalized.
-`Finalize` operation "parks" the `Proposal` to the final state for the SPL system recognizing it as a finished matter.
+The `Governance` configures not only the threshold but also the time of the `Proposal` voting.
+When the time exceeds the `Proposal` and not enough `Yes` votes were collected,
+then the proposal is considered as failed and can't be voted anymore.
+
+Either, if the `Proposal` succeeds or not when finished can be `Finalized`
+and `parked` at the final state for the SPL system recognizing it as a finished matter.
 
 === SPL Governance Custom Transaction
 
