--- a/content/posts/2024-10-08-story-solana-multisig.adoc
+++ b/content/posts/2024-10-08-story-solana-multisig.adoc
@@ -1,9 +1,9 @@
 = Story of a Solana multisig signature
 chalda <ondrej.chaloupka@proton.me>
-1.0, 2023-07-25
+1.0, 2024-10-08
 
 :page-template: post
-:page-draft: true
+:page-draft: false
 :page-slug: spl-governance-transaction
 :page-category: solana
 :page-tags: Solana, Typescript, SPL.Governance
@@ -19,26 +19,26 @@ and the creation of an arbitrary transaction that multisig members sign and exec
 
 == SPL Governance as multisig manager
 
-The https://github.com/solana-labs/solana-program-library/blob/master/governance/[SPL Governance] is a Solana program that runs DAO management.
-One https://app.realms.today/realms[can create] his own DAO instance in the system and use the SPL Governance for community to manage the DAO.
+The https://github.com/solana-labs/solana-program-library/blob/master/governance/[SPL Governance^] is a Solana program that runs DAO management.
+One https://app.realms.today/realms[can create^] his own DAO instance in the system and use the SPL Governance for community to manage the DAO.
 But another possible usage is to use it as a multisig tooling. For that one creates a new DAO where no community is involved and only particular wallets
 has permission to proceed with signatures. This is referred as council managed.
-There are other offerings for multisig management like https://squads.so/[Squads protocol].
-While a benefit of the https://twitter.com/realms_daos[SPL Governance] system is that's part of
-the Solana Program Library and thus it's developed by people from https://solanalabs.com[Solana Labs].
+There are other offerings for multisig management like https://squads.so/[Squads protocol^].
+While a benefit of the https://twitter.com/realms_daos[SPL Governance^] system is that's part of
+the Solana Program Library and thus it's developed by people from https://solanalabs.com[Solana Labs^].
 
-This is simple as go to https://app.realms.today/ (when testing the your configuration add https://app.realms.today/?cluster=devnet[?cluster=devnet] for devnet deployment),
+This is simple as go to https://app.realms.today/ (when testing the your configuration add https://app.realms.today/?cluster=devnet[?cluster=devnet^] for devnet deployment),
 click at blue button `Create DAO` and choose the `Multi-Signature Wallet`. The wizard goes with you through few steps
 where one defines what wallet keys will be part of the multisig management (members of the multisig may be still
-https://docs.realms.today/DAO-Management/DAO-add-members[added or removed later])
+https://docs.realms.today/DAO-Management/DAO-add-members[added or removed later^])
 and then the multisig DAO is created.
 
 NOTE: For technical details about the SPL Governance system I recommend to read through the
       https://docs.realms.today/spl-governance-deep-dive[SPL Governance Deep Dive] article.
 
 For the purpose of the showcase in this blog post I have created a DAO
-https://app.realms.today/dao/2EogxMvrtTr8ccA4oQcAGfS8vKbDhYTANA12LW3fqUy3?cluster=devnet[Solana multisig signature]
-https://app.realms.today/dao/2EogxMvrtTr8ccA4oQcAGfS8vKbDhYTANA12LW3fqUy3/members?cluster=devnet[with one member]
+https://app.realms.today/dao/2EogxMvrtTr8ccA4oQcAGfS8vKbDhYTANA12LW3fqUy3?cluster=devnet[Solana multisig signature^]
+https://app.realms.today/dao/2EogxMvrtTr8ccA4oQcAGfS8vKbDhYTANA12LW3fqUy3/members?cluster=devnet[with one member^]
 of address `FwkjePeCG5CjD8uYsHh3hvj6X26KnNh2UrpZSpDiNbfh``.
 
 image::articles/spl-custom-transaction/one-member.png[]
@@ -48,7 +48,7 @@ Any actions that the multisig should sign have to be defined as a `Proposal`
 that contains transactions. When the proposal is confirmed by multisig members then anybody may be execute.
 At the main page of the DAO one click at `⊕ New Proposal`. When the member wallet is connected a new `Proposal` can be created and then multisig owners
 can vote for or against it. The SPL Governance system provides a list of common `Instruction`s types that is integrated to UI and easily set up.
-Those are things as sending funds or working with https://spl.solana.com/token[token accounts].
+Those are things as sending funds or working with https://spl.solana.com/token[token accounts^].
 But what if my custom contract contains some admin abilities that I need to manage?
 How can I create a transaction that contains an arbitrary data?
 
@@ -79,7 +79,7 @@ and `parked` at the final state for the SPL system recognizing it as a finished 
 
 For anybody can create a `Proposal` with whatever transaction content there is Instruction type `Common: Execute Custom Instruction`.
 The transaction can be created with UI for anybody having the keys for the council power
-at the address of the DAO https://app.realms.today/dao/2EogxMvrtTr8ccA4oQcAGfS8vKbDhYTANA12LW3fqUy3/proposal/new?cluster=devnet
+at the address of the DAO https://app.realms.today/dao/2EogxMvrtTr8ccA4oQcAGfS8vKbDhYTANA12LW3fqUy3/proposal/new?cluster=devnet[^]
 
 image::articles/spl-custom-transaction/custom-transaction-proposal.png[]
 
@@ -107,33 +107,38 @@ that contains `program id`, `account keys` and `call data`
 ]
 ----
 
-When we work with Typescript we can use the https://github.com/solana-labs/oyster[Oyster] SPL Governance SDK
+When we work with Typescript we can use the https://github.com/solana-labs/oyster[Oyster^] SPL Governance SDK
 that provides the function
-https://github.com/solana-labs/oyster/blob/040b7c89f757846f64c2436dbb58ecc4db8c5837/packages/governance-sdk/src/governance/serialisation.ts#L229[`serializeInstructionToBase64`]
+https://github.com/solana-labs/oyster/blob/040b7c89f757846f64c2436dbb58ecc4db8c5837/packages/governance-sdk/src/governance/serialisation.ts#L229[`serializeInstructionToBase64`^]
 that takes an instruction and provides the encoded form
 that can be copy-pasted into the field.
 
+WARN: The SPL Governance system Oyster SDK is deprecated and the new SDK is being developed.
+      The new SDK is based on IDL, see at https://www.npmjs.com/package/governance-idl-sdk[^]
+
+When we work with Rust we can use the `bincode` or `serde` to serialize the transaction data.
+
 If we work with Rust we need to transform the `Transaction` structure in the required format and print it.
 When using `bincode` then one can use the way provided in Anchor CLI in function
-https://github.com/coral-xyz/anchor/blob/v0.28.0/cli/src/lib.rs#L2247[print_idl_instruction]
-(included as part of the PR https://github.com/coral-xyz/anchor/pull/2486/files#diff-c1f8f7498da827a634bddc8a7559198bc99b296e9d9e8b91a70b503662995b8cR2248[CLI anchor idl command to use dump base64 for set-buffer and close])
+https://github.com/coral-xyz/anchor/blob/v0.28.0/cli/src/lib.rs#L2247[print_idl_instruction^]
+(included as part of the PR https://github.com/coral-xyz/anchor/pull/2486/files#diff-c1f8f7498da827a634bddc8a7559198bc99b296e9d9e8b91a70b503662995b8cR2248[CLI anchor idl command to use dump base64 for set-buffer and close^])
 or in case of usage `serde` then prepare the `struct` that align with the expected format. It could be for example as of struct
-https://github.com/marinade-finance/multisig/blob/master/programs/multisig/src/lib.rs#L239[TransactionInstruction]
-that implements https://github.com/marinade-finance/multisig/blob/master/programs/multisig/src/lib.rs#L263[From for Instruction]
-and can be used like https://github.com/coral-xyz/anchor/pull/2486/commits/ff4d9f9a1c4fb875b5ac0d772d99fa97d01b5208#diff-c1f8f7498da827a634bddc8a7559198bc99b296e9d9e8b91a70b503662995b8cR2068[base64::encode(ix.into().try_to_vec()?)]. 
+https://github.com/marinade-finance/multisig/blob/master/programs/multisig/src/lib.rs#L239[TransactionInstruction^]
+that implements https://github.com/marinade-finance/multisig/blob/master/programs/multisig/src/lib.rs#L263[From for Instruction^]
+and can be used like https://github.com/coral-xyz/anchor/pull/2486/commits/ff4d9f9a1c4fb875b5ac0d772d99fa97d01b5208#diff-c1f8f7498da827a634bddc8a7559198bc99b296e9d9e8b91a70b503662995b8cR2068[base64::encode(ix.into().try_to_vec()?)^]. 
 
 == Contract example with admin authority
 
-To show the deployment I use a simple example contract https://github.com/ochaloup/simple-admin/tree/v2[`Simple admin`]
-under `v2` branch (the first version of the contract https://github.com/ochaloup/simple-admin/tree/v2[`v1`]
+To show the deployment I use a simple example contract https://github.com/ochaloup/simple-admin/tree/v2[`Simple admin`^]
+under `v2` branch (the first version of the contract https://github.com/ochaloup/simple-admin/tree/v2[`v1`^]
 was used as example in the article link:./decoding-solana-data[Decoding Solana data accounts]).
 
 The contract works on the simple base where admin has to sign the
-https://github.com/ochaloup/simple-admin/blob/v2/programs/simple-admin/src/instructions/print_message.rs[`PrintMessage`]
+https://github.com/ochaloup/simple-admin/blob/v2/programs/simple-admin/src/instructions/print_message.rs[`PrintMessage`^]
 instruction. When signed then instruction is successfully executed which prints message
 into the transaction log and saves it into a separate solana account.
-The created admin account https://explorer.solana.com/address/3oZa6pjVpC5m1gaKYnXWoxahrBQt2dCsapBSiDAMBWoh/anchor-account?cluster=devnet[`3oZa6pjVpC5m1gaKYnXWoxahrBQt2dCsapBSiDAMBWoh`] configures the admin being
-the multisig governance wallet https://app.realms.today/dao/2EogxMvrtTr8ccA4oQcAGfS8vKbDhYTANA12LW3fqUy3/treasury/v2?cluster=devnet[`GjYBMcRv4JzkgqCfeUKQMs7KygkFvgLpGzFbQ7SihGJ8`].
+The created admin account https://explorer.solana.com/address/3oZa6pjVpC5m1gaKYnXWoxahrBQt2dCsapBSiDAMBWoh/anchor-account?cluster=devnet[`3oZa6pjVpC5m1gaKYnXWoxahrBQt2dCsapBSiDAMBWoh`^] configures the admin being
+the multisig governance wallet https://app.realms.today/dao/2EogxMvrtTr8ccA4oQcAGfS8vKbDhYTANA12LW3fqUy3/treasury/v2?cluster=devnet[`GjYBMcRv4JzkgqCfeUKQMs7KygkFvgLpGzFbQ7SihGJ8`^].
 
 With that the `PrintMessage` instruction has to be signed with SPL governance `Proposal` acknowledged by members of the multisig.
 Obviously the Governance UI does list the `simple-admin` instructions in the listing
@@ -172,6 +177,7 @@ The content of the `simple-account` says that only signature of the governance w
 When we try to execute the transaction signed by the default wallet (`~/.config/solana/id.json`)
 an error is emitted.
 
+[[base64-print-message]]
 [source,sh]
 ----
 # trying to execute the print-message with default solana wallet
@@ -192,9 +198,10 @@ pnpm cli -ud print-message --print-only --rent-payer GjYBMcRv4JzkgqCfeUKQMs7Kygk
 
 Let's elaborate on this action a little bit.
 
-We used the `--print-only` argument that instead of execution of the transaction to cluster
+We used the
+link:https://github.com/ochaloup/simple-admin/blob/v2/packages/simple-admin-cli/src/commands/utils.ts#L20[`--print-only`^]
+argument that instead of execution of the transaction to cluster
 uses the Oyster function to print the transaction in base64 format.
-// TODO: add link to code here
 
 An important thing to notice is that we provided the `--rent-payer` argument.
 The `PrintMessage` instruction creates a new account where a message is saved into.
@@ -223,8 +230,25 @@ image::articles/spl-custom-transaction/multisig-proposal-creation-simulation.png
 The `Inspect` button redirects us to Solana Explorer
 where we can review the transaction from there.
 
-// TODO: talk about Solana TX tool
+=== solana-tx tooling
 
+When we have the base64 transaction data we can use the `solana-tx` tooling to decode the transaction content.
+It's a simple web based app that I develop for the purpose of the transaction inspection.
+
+See at https://chalda.cz/solana-tx/[^]
+
+The tooling allows to paste the base64 transaction data and see the content of the transaction.
+The tool uses ExplorerKit to decode the transaction content and if possible to decode it and to show the details.
+
+You can try to paste the base64 transaction as generated by
+<<base64-print-message,`--print-only` argument of the `simple-admin` CLI>>.
+Select the `devnet` (as the `simple-admin` program is deployed at Solana devnet) and the tool will
+link:https://chalda.cz/solana-tx/?message=DPRtGY504O6TnBjrarIUv9xLcAC17A%2FDMHqwT2cgX78FAAAAKaTrO1Ty3tvwfW%2Frnwokf8rtF%2BEgRM3z1Nxd%2BoTUD5gAAenE85m%2Fzh0eB1j8UHbJDkYK%2Bb%2BmqI9psHckuV6lrgRtAQCYBSVJmeyBwE67H9wKHeiNwzR47QJ0XgYHJjS6rEJoJQAB6cTzmb%2FOHR4HWPxQdskORgr5v6aoj2mwdyS5XqWuBG0BAQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAARAAAARg8IXY5SF1kFAAAAZ20gZ20%3D[show the content of the transaction^]
+after clicking on `Show deserialized format`.
+
+NOTE: You can use the tooling to deserialize content of events as well at https://chalda.cz/solana-tx/event[^]
+
+=== Finishing the story
 
 When we finish with having the `Proposal` created, the `Proposal` is acknowledged by multisig members
 (the more that threshold of voters voted `Yes` on the `Proposal`) and 
@@ -257,4 +281,4 @@ pnpm cli -ud show --address 3oZa6pjVpC5m1gaKYnXWoxahrBQt2dCsapBSiDAMBWoh --print
 With that we went through the SPL Governance Multisig signature management,
 we talked about `Proposal` creation and risk connected with Proposal's transaction
 using signatures different to a wallet (fee-payer) and we introduced
-a tool to list SPL Gov 
+a tool to list SPL Gov.
